--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
-unsafe-perm=true
 shamefully-hoist=true
+strict-peer-dependencies=false
 enable-pre-post-scripts=true
+unsafe-perm=true
 ignore-scripts=false
