--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
     "@tailwindcss/vite": "^4.1.17",
+    "supabase": "^2.76.10",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
@@ -49,5 +51,4 @@
     "vitest": "^4.0.14",
     "vue-tsc": "^3.1.5"
   }
-
 }
